--- a/Resources/DesktopModules/DigitalAssets/App_LocalResources/EditFolderMapping.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/DigitalAssets/App_LocalResources/EditFolderMapping.ascx.nl-NL.resx
@@ -15,8 +15,8 @@
   <data name="ControlTitle.Text">
     <value xml:space="preserve">{0} maptype</value>
   </data>
-  <data name="ControlTitle_editfoldermapping.Text">
-    <value xml:space="preserve">Bewerk map routering</value>
+  <data name="ControlTitle_editfoldermapping.Text" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Bewerk maproutering</value>
   </data>
   <data name="Description.Text">
     <value xml:space="preserve">Gebruik dit dialoog in een nieuw maptype te definiëren.</value>
@@ -24,40 +24,40 @@
   <data name="DuplicateMappingName.Text">
     <value xml:space="preserve">Een routering met dezelfde naam bestaat al. De wijzigingen worden niet opgeslagen</value>
   </data>
-  <data name="FolderProviderSettings.Text">
-    <value xml:space="preserve">Map provider instellingen</value>
+  <data name="FolderProviderLabel.Help" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Selecteerd de map provider die je wilt gebruiken.</value>
+  </data>
+  <data name="FolderProviderLabel.Text" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Mapprovider</value>
+  </data>
+  <data name="FolderProviderSettings.Text" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Mapprovider instellingen</value>
+  </data>
+  <data name="FolderProviderValidator.ErrorMessage" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Mapprovider is vereist</value>
   </data>
   <data name="GeneralSettings.Text">
     <value xml:space="preserve">Algemene instellingen</value>
   </data>
-  <data name="FolderProviderLabel.Help">
-    <value xml:space="preserve">Selecteerd de map provider die u wilt gebruiken.</value>
-  </data>
-  <data name="FolderProviderLabel.Text">
-    <value xml:space="preserve">Map provider</value>
-  </data>
-  <data name="NameLabel.Help">
-    <value xml:space="preserve">Vul de naam in van deze map routering</value>
+  <data name="NameLabel.Help" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Vul de naam in van deze maproutering</value>
   </data>
   <data name="NameLabel.Text">
     <value xml:space="preserve">Naam</value>
   </data>
+  <data name="NameValidator.ErrorMessage" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">Een naam is vereist</value>
+  </data>
   <data name="RequiredFields.Text">
     <value xml:space="preserve">Indicatie voor verplichte velden</value>
   </data>
-  <data name="SelectFolderProvider.Text">
-    <value xml:space="preserve">- selecteer een map provider -</value>
+  <data name="SelectFolderProvider.Text" lastModified="2020-05-16 16:12:30">
+    <value xml:space="preserve">- selecteer een mapprovider -</value>
   </data>
   <data name="SyncWarning.Text">
     <value xml:space="preserve">Na het bijwerken van het maptype zal een synchronisatie worden uitgevoerd op alle mappen met dit maptype. Dit kan enige tijd duren afhankelijk van het aantal mappen dat aan de criteria voldoet.</value>
   </data>
   <data name="Update.Text">
     <value xml:space="preserve">Bijwerken</value>
-  </data>
-  <data name="FolderProviderValidator.ErrorMessage">
-    <value xml:space="preserve">Map provider is vereist</value>
-  </data>
-  <data name="NameValidator.ErrorMessage">
-    <value xml:space="preserve">Naam is vereist</value>
   </data>
 </root>
