--- a/Resources/DesktopModules/DigitalAssets/App_LocalResources/FolderMappings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/DigitalAssets/App_LocalResources/FolderMappings.ascx.nl-NL.resx
@@ -18,22 +18,22 @@
   <data name="cmdNewMapping.Text">
     <value xml:space="preserve">Nieuw type toevoegen</value>
   </data>
-  <data name="ControlTitle_foldermappings.Text">
-    <value xml:space="preserve">Map types</value>
+  <data name="ControlTitle_foldermappings.Text" lastModified="2020-05-16 16:13:33">
+    <value xml:space="preserve">Maptypes</value>
   </data>
-  <data name="DeleteConfirm.Text">
-    <value xml:space="preserve">Weet u zeker dat u de {0} map type definitie wilt verwijderen?</value>
+  <data name="DeleteConfirm.Text" lastModified="2020-05-16 16:13:33">
+    <value xml:space="preserve">Weet je zeker dat je de {0} maptype definitie wilt verwijderen?</value>
   </data>
-  <data name="Description.Text">
-    <value xml:space="preserve">Beheer de map types beschikbaar voor deze site. De standaard types- Standaard, beveiligd en database - mogen niet worden aangepast of worden verwijderd. Niet standaard types kunnen worden opgenomen door deze te selecteren en te verplaatsen naar de gewenste positie. De volgorde zal verschillen tijdens het oplossen van conflicten tijdens de map synchronisaties.</value>
+  <data name="Description.Text" lastModified="2020-05-16 16:13:33">
+    <value xml:space="preserve">Beheer de maptypes beschikbaar voor deze site. De standaard types- Standaard, beveiligd en database - mogen niet worden aangepast of worden verwijderd. Niet standaard types kunnen worden opgenomen door deze te selecteren en te verplaatsen naar de gewenste positie. De volgorde zal verschillen tijdens het oplossen van conflicten tijdens de map synchronisaties.</value>
   </data>
   <data name="Name.Header">
     <value xml:space="preserve">Naam</value>
   </data>
-  <data name="TableHeader.Text">
-    <value xml:space="preserve">Map type definitie</value>
+  <data name="TableHeader.Text" lastModified="2020-05-16 16:13:33">
+    <value xml:space="preserve">Maptypedefinitie</value>
   </data>
-  <data name="Type.Header">
-    <value xml:space="preserve">Map provider</value>
+  <data name="Type.Header" lastModified="2020-05-16 16:13:33">
+    <value xml:space="preserve">Mapprovider</value>
   </data>
 </root>
