--- a/Resources/DesktopModules/DigitalAssets/App_LocalResources/SharedResources.nl-NL.resx
+++ b/Resources/DesktopModules/DigitalAssets/App_LocalResources/SharedResources.nl-NL.resx
@@ -12,17 +12,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CopyToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Kopieer</value>
+  </data>
+  <data name="CopyToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Kopieer</value>
+  </data>
   <data name="CreateFolderToolBarButtonExtensionPoint.AltText">
     <value xml:space="preserve">Nieuwe map</value>
   </data>
   <data name="CreateFolderToolBarButtonExtensionPoint.Text">
     <value xml:space="preserve">Nieuwe map</value>
-  </data>
-  <data name="DownloadToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Download</value>
-  </data>
-  <data name="DownloadToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Download</value>
   </data>
   <data name="DeleteToolBarButtonExtensionPoint.AltText">
     <value xml:space="preserve">Verwijderen</value>
@@ -30,125 +30,14 @@
   <data name="DeleteToolBarButtonExtensionPoint.Text">
     <value xml:space="preserve">Verwijderen</value>
   </data>
-  <data name="FolderAlreadyExists.Error">
-    <value xml:space="preserve">Map kan niet worden aangemaakt ({0}), de map bestaat al binnen deze locatie.</value>
+  <data name="DestinationFolderCannotMatchSourceFolder.Error" lastModified="2020-05-16 16:17:16">
+    <value xml:space="preserve">Bestemmingsmap mag niet hetzelfde zijn als de bronmap</value>
   </data>
-  <data name="FolderFileNameHasInvalidcharacters.Error">
-    <value xml:space="preserve">De naam bevat ongeldige karakters. Specificeer een naam zonder {0}</value>
+  <data name="DownloadToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Download</value>
   </data>
-  <data name="RefreshFolderToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Verversen</value>
-  </data>
-  <data name="RefreshFolderToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Map verversen</value>
-  </data>
-  <data name="RootFolder.Text">
-    <value xml:space="preserve">Hoofd</value>
-  </data>
-  <data name="UploadFilesToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Bestanden uploaden</value>
-  </data>
-  <data name="UploadFilesToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Bestanden uploaden</value>
-  </data>
-  <data name="UserHasNoPermissionToDeleteFiles.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om bestanden te verwijderen uit deze map</value>
-  </data>
-  <data name="UserHasNoPermissionToDeleteFolder.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te verwijderen</value>
-  </data>
-  <data name="UserHasNoPermissionToDownload.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om dit bestand te downloaden</value>
-  </data>
-  <data name="RenameToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Hernoemen</value>
-  </data>
-  <data name="RenameToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Hernoemen</value>
-  </data>
-  <data name="CopyToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Kopieer</value>
-  </data>
-  <data name="CopyToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Kopieer</value>
-  </data>
-  <data name="FileAlreadyExists.Error">
-    <value xml:space="preserve">Het bestand bestaat al in de bestemmingsmap</value>
-  </data>
-  <data name="MoveToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Verplaats</value>
-  </data>
-  <data name="MoveToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Verplaats</value>
-  </data>
-  <data name="ToggleLeftPaneToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Klikken</value>
-  </data>
-  <data name="ToggleLeftPaneToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Klikken</value>
-  </data>
-  <data name="DestinationFolderCannotMatchSourceFolder.Error">
-    <value xml:space="preserve">Bestemmingsmap mag niet overeenkomen met de bronmap</value>
-  </data>
-  <data name="UserHasNoPermissionToCopyFolder.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om vanuit deze map te kopiëren</value>
-  </data>
-  <data name="UserHasNoPermissionToMoveFolder.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te verplaatsen</value>
-  </data>
-  <data name="GetUrlToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Haal URL op</value>
-  </data>
-  <data name="GetUrlToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Haal URL op</value>
-  </data>
-  <data name="ViewPropertiesToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Mapeigenschappen weergeven</value>
-  </data>
-  <data name="ViewPropertiesToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Mapeigenschappen weergeven</value>
-  </data>
-  <data name="GridViewToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Lijstweergave</value>
-  </data>
-  <data name="GridViewToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Lijst</value>
-  </data>
-  <data name="ListViewToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Iconenweergave</value>
-  </data>
-  <data name="ListViewToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Iconen</value>
-  </data>
-  <data name="ViewPropertiesSelectionToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Eigenschappen weergeven</value>
-  </data>
-  <data name="ViewPropertiesSelectionToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Eigenschappen weergeven</value>
-  </data>
-  <data name="FieldType.DisplayName">
-    <value xml:space="preserve">Type</value>
-  </data>
-  <data name="FieldSize.DisplayName">
-    <value xml:space="preserve">Grootte</value>
-  </data>
-  <data name="FieldTotalFiles.DisplayName">
-    <value xml:space="preserve">Totaal aantal bestanden</value>
-  </data>
-  <data name="PreviewPanelTitle.Text">
-    <value xml:space="preserve">Voorbeeld</value>
-  </data>
-  <data name="FolderNameRequired.ErrorMessage">
-    <value xml:space="preserve">Mapnaam is vereist</value>
-  </data>
-  <data name="ZoomImage.AltText">
-    <value xml:space="preserve">Open het bestand in een nieuw tabblad</value>
-  </data>
-  <data name="UserHasNoPermissionToReadFile.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om dit bestand te lezen</value>
-  </data>
-  <data name="UserHasNoPermissionToReadFolder.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te lezen</value>
+  <data name="DownloadToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Download</value>
   </data>
   <data name="FieldCreated.DisplayName">
     <value xml:space="preserve">Aangemaakt</value>
@@ -162,11 +51,95 @@
   <data name="FieldModifiedBy.DisplayName">
     <value xml:space="preserve">Aangepast door</value>
   </data>
-  <data name="UserHasNoPermissionToBrowseFolder.Error">
-    <value xml:space="preserve">De gebruiker heeft geen rechten om in deze map te kijken</value>
+  <data name="FieldSize.DisplayName">
+    <value xml:space="preserve">Grootte</value>
+  </data>
+  <data name="FieldTotalFiles.DisplayName">
+    <value xml:space="preserve">Totaal aantal bestanden</value>
+  </data>
+  <data name="FieldType.DisplayName">
+    <value xml:space="preserve">Type</value>
+  </data>
+  <data name="FileAlreadyExists.Error">
+    <value xml:space="preserve">Het bestand bestaat al in de bestemmingsmap</value>
+  </data>
+  <data name="FileDoesNotExists.Error">
+    <value xml:space="preserve">Bestand bestaat niet</value>
+  </data>
+  <data name="FolderAlreadyExists.Error">
+    <value xml:space="preserve">Map kan niet worden aangemaakt ({0}), de map bestaat al binnen deze locatie.</value>
+  </data>
+  <data name="FolderDoesNotExists.Error">
+    <value xml:space="preserve">Deze map bestaat niet</value>
+  </data>
+  <data name="FolderFileNameHasInvalidcharacters.Error">
+    <value xml:space="preserve">De naam bevat ongeldige karakters. Specificeer een naam zonder {0}</value>
+  </data>
+  <data name="FolderNameRequired.ErrorMessage">
+    <value xml:space="preserve">Mapnaam is vereist</value>
+  </data>
+  <data name="GetUrlToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Haal URL op</value>
+  </data>
+  <data name="GetUrlToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Haal URL op</value>
+  </data>
+  <data name="GridViewToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Lijstweergave</value>
+  </data>
+  <data name="GridViewToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Lijst</value>
+  </data>
+  <data name="ListViewToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Iconenweergave</value>
+  </data>
+  <data name="ListViewToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Iconen</value>
+  </data>
+  <data name="ManageFolderTypesToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Beheerde bestandstypes</value>
+  </data>
+  <data name="ManageFolderTypesToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Beheerde bestandstypes</value>
+  </data>
+  <data name="MappedPathRegExValidator.ErrorMessage">
+    <value xml:space="preserve">Koppelingspad kan geen absoluut pad zijn</value>
+  </data>
+  <data name="MoveNotAllowedBetweenFolderTypes.Error">
+    <value xml:space="preserve">Map verplaatsoperatie tussen deze twee maptypes is niet toegestaan</value>
+  </data>
+  <data name="MoveToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Verplaats</value>
+  </data>
+  <data name="MoveToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Verplaats</value>
+  </data>
+  <data name="MyFolder.Text">
+    <value xml:space="preserve">Mijn map</value>
+  </data>
+  <data name="PreviewPanelTitle.Text">
+    <value xml:space="preserve">Voorbeeld</value>
+  </data>
+  <data name="Published.Text">
+    <value xml:space="preserve">Publiceren</value>
+  </data>
+  <data name="RefreshFolderToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Verversen</value>
+  </data>
+  <data name="RefreshFolderToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Map verversen</value>
   </data>
   <data name="RefreshMenuItemExtensionPoint.Text">
     <value xml:space="preserve">Verversen</value>
+  </data>
+  <data name="RenameToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Hernoemen</value>
+  </data>
+  <data name="RenameToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Hernoemen</value>
+  </data>
+  <data name="RootFolder.Text">
+    <value xml:space="preserve">Hoofd</value>
   </data>
   <data name="SyncMenuItemExtensionPoint.Text">
     <value xml:space="preserve">Synchroniseer deze map</value>
@@ -180,8 +153,17 @@
   <data name="SyncToolBarMenuButtonExtensionPoint.Text">
     <value xml:space="preserve">Synchroniseer</value>
   </data>
-  <data name="Published.Text">
-    <value xml:space="preserve">Publiceren</value>
+  <data name="ToggleLeftPaneToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Klikken</value>
+  </data>
+  <data name="ToggleLeftPaneToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Klikken</value>
+  </data>
+  <data name="UnlinkToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Ontkoppel</value>
+  </data>
+  <data name="UnlinkToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Ontkoppel</value>
   </data>
   <data name="Unpublished.Text">
     <value xml:space="preserve">Publicatie ongedaanmaken</value>
@@ -192,34 +174,52 @@
   <data name="UnzipFileToolBarButtonExtensionPoint.Text">
     <value xml:space="preserve">Bestanden uitpakken</value>
   </data>
-  <data name="MappedPathRegExValidator.ErrorMessage">
-    <value xml:space="preserve">Koppelingspad kan geen absoluut pad zijn</value>
+  <data name="UploadFilesToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Bestanden uploaden</value>
   </data>
-  <data name="MoveNotAllowedBetweenFolderTypes.Error">
-    <value xml:space="preserve">Map verplaatsoperatie tussen deze twee maptypes is niet toegestaan</value>
+  <data name="UploadFilesToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Bestanden uploaden</value>
   </data>
-  <data name="FolderDoesNotExists.Error">
-    <value xml:space="preserve">Deze map bestaat niet</value>
+  <data name="UserHasNoPermissionToBrowseFolder.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om in deze map te kijken</value>
   </data>
-  <data name="FileDoesNotExists.Error">
-    <value xml:space="preserve">Bestand bestaat niet</value>
+  <data name="UserHasNoPermissionToCopyFolder.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om vanuit deze map te kopiëren</value>
   </data>
-  <data name="MyFolder.Text">
-    <value xml:space="preserve">Mijn map</value>
+  <data name="UserHasNoPermissionToDeleteFiles.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om bestanden te verwijderen uit deze map</value>
   </data>
-  <data name="ManageFolderTypesToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Beheerde bestandstypes</value>
+  <data name="UserHasNoPermissionToDeleteFolder.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te verwijderen</value>
   </data>
-  <data name="ManageFolderTypesToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Beheerde bestandstypes</value>
+  <data name="UserHasNoPermissionToDownload.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om dit bestand te downloaden</value>
   </data>
-  <data name="UnlinkToolBarButtonExtensionPoint.AltText">
-    <value xml:space="preserve">Ontkoppel</value>
+  <data name="UserHasNoPermissionToMoveFolder.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te verplaatsen</value>
   </data>
-  <data name="UnlinkToolBarButtonExtensionPoint.Text">
-    <value xml:space="preserve">Ontkoppel</value>
+  <data name="UserHasNoPermissionToReadFile.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om dit bestand te lezen</value>
+  </data>
+  <data name="UserHasNoPermissionToReadFolder.Error">
+    <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te lezen</value>
   </data>
   <data name="UserHasNoPermissionToUnlinkFolder.Error">
     <value xml:space="preserve">De gebruiker heeft geen rechten om deze map te ontkoppelen</value>
+  </data>
+  <data name="ViewPropertiesSelectionToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Eigenschappen weergeven</value>
+  </data>
+  <data name="ViewPropertiesSelectionToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Eigenschappen weergeven</value>
+  </data>
+  <data name="ViewPropertiesToolBarButtonExtensionPoint.AltText">
+    <value xml:space="preserve">Mapeigenschappen weergeven</value>
+  </data>
+  <data name="ViewPropertiesToolBarButtonExtensionPoint.Text">
+    <value xml:space="preserve">Mapeigenschappen weergeven</value>
+  </data>
+  <data name="ZoomImage.AltText">
+    <value xml:space="preserve">Open het bestand in een nieuw tabblad</value>
   </data>
 </root>
