--- a/Resources/DesktopModules/HTML/App_LocalResources/Workflow.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/HTML/App_LocalResources/Workflow.ascx.nl-NL.resx
@@ -12,89 +12,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="plWorkflow1.Text">
-    <value xml:space="preserve">Workflow</value>
-  </data>
-  <data name="plWorkflow1.Help">
-    <value xml:space="preserve">Geef een Workflow op om te onderhouden</value>
-  </data>
-  <data name="plWorkflow2.Text">
-    <value xml:space="preserve">Workflow</value>
-  </data>
-  <data name="plWorkflow2.Help">
-    <value xml:space="preserve">Geef een naam op voor de Workflow</value>
-  </data>
-  <data name="plDescription.Text">
-    <value xml:space="preserve">Beschrijving</value>
-  </data>
-  <data name="plDescription.Help">
-    <value xml:space="preserve">Geef een beschrijving voor de workflow op</value>
-  </data>
-  <data name="plHistory.Text">
-    <value xml:space="preserve">Geschiedenis</value>
-  </data>
-  <data name="plHistory.Help">
-    <value xml:space="preserve">Bepaal het maximum aantal versies om vast te houden</value>
-  </data>
-  <data name="plDeleted.Text">
-    <value xml:space="preserve">Verwijderd</value>
-  </data>
-  <data name="plDeleted.Help">
-    <value xml:space="preserve">Bepaal of de status actief is of niet</value>
-  </data>
-  <data name="cmdAddWorkflow.Text">
-    <value xml:space="preserve">Nieuwe Workflow Toevoegen</value>
-  </data>
-  <data name="WorkflowExists.Text">
-    <value xml:space="preserve">Er bestaat al een Workflow met de opgegeven naam voor deze site.</value>
-  </data>
-  <data name="dshStates.Text">
-    <value xml:space="preserve">Statussen</value>
-  </data>
-  <data name="State.Header">
-    <value xml:space="preserve">Status</value>
-  </data>
   <data name="Active.Header">
     <value xml:space="preserve">Actief</value>
   </data>
   <data name="cmdAddState.Text">
     <value xml:space="preserve">Nieuwe Status Toevoegen</value>
   </data>
+  <data name="cmdAddWorkflow.Text">
+    <value xml:space="preserve">Nieuwe Workflow Toevoegen</value>
+  </data>
+  <data name="ControlTitle_workflow.Text">
+    <value xml:space="preserve">Onderhouden Workflows</value>
+  </data>
   <data name="dshPermissions.Text">
     <value xml:space="preserve">Status Configuratie</value>
   </data>
-  <data name="plState.Text">
-    <value xml:space="preserve">Status</value>
+  <data name="dshStates.Text">
+    <value xml:space="preserve">Statussen</value>
   </data>
-  <data name="plState.Help">
-    <value xml:space="preserve">Voer een naam in voor de status</value>
-  </data>
-  <data name="plPermissions.Text">
-    <value xml:space="preserve">Recensenten</value>
-  </data>
-  <data name="plPermissions.Help">
-    <value xml:space="preserve">Bepaal wie de content mag recenseren voor de status</value>
-  </data>
-  <data name="plNotify.Text">
-    <value xml:space="preserve">Berichtgeving</value>
-  </data>
-  <data name="plNotify.Help">
-    <value xml:space="preserve">Bepaal of de auteur en de recensenten een e-mail moeten ontvangen afhankelijk van de status</value>
-  </data>
-  <data name="plActive.Text">
-    <value xml:space="preserve">Actief</value>
-  </data>
-  <data name="plActive.Help">
-    <value xml:space="preserve">Bepaal of de status actief is</value>
-  </data>
-  <data name="dshVersions.Text">
-    <value xml:space="preserve">Versie Geschiedenis</value>
-  </data>
-  <data name="plMaximumVersionHistory.Text">
-    <value xml:space="preserve">Geschiedenis</value>
-  </data>
-  <data name="plMaximumVersionHistory.Help">
-    <value xml:space="preserve">Geef het maximum aantal content versies aan dat moet worden opgeslagen in ge geschiedenis van de module ( geef nul in om alle versies op te slaan )</value>
+  <data name="dshVersions.Text" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Versiegeschiedenis</value>
   </data>
   <data name="ModuleHelp.Text">
     <value xml:space="preserve">&lt;p&gt;
@@ -114,10 +51,73 @@
                 e-mail links, File Manager fotogalerij, bullet points, spellingscontrole en nog
                 veel meer.&lt;/li&gt;</value>
   </data>
-  <data name="ControlTitle_workflow.Text">
-    <value xml:space="preserve">Onderhouden Workflows</value>
+  <data name="plActive.Help">
+    <value xml:space="preserve">Bepaal of de status actief is</value>
   </data>
-  <data name="WorkFlowStateHelp.Text">
-    <value xml:space="preserve">In deze sectie kunt u de workflow staten beheren. Let op: wanneer een Workflow in gebruik is kunt u niet een van de workflow statussen van deze workflow verwijderen. Tevens kunnen de eerste en laatste workflow statussen niet worden verwijderd.</value>
+  <data name="plActive.Text">
+    <value xml:space="preserve">Actief</value>
+  </data>
+  <data name="plDeleted.Help">
+    <value xml:space="preserve">Bepaal of de status actief is of niet</value>
+  </data>
+  <data name="plDeleted.Text">
+    <value xml:space="preserve">Verwijderd</value>
+  </data>
+  <data name="plDescription.Help">
+    <value xml:space="preserve">Geef een beschrijving voor de workflow op</value>
+  </data>
+  <data name="plDescription.Text">
+    <value xml:space="preserve">Beschrijving</value>
+  </data>
+  <data name="plHistory.Help">
+    <value xml:space="preserve">Bepaal het maximum aantal versies om vast te houden</value>
+  </data>
+  <data name="plHistory.Text" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Historie</value>
+  </data>
+  <data name="plMaximumVersionHistory.Help" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Geef het maximum aantal contentversies aan dat moet worden opgeslagen in de historie van de module ( geef nul in om alle versies op te slaan )</value>
+  </data>
+  <data name="plMaximumVersionHistory.Text" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Historie</value>
+  </data>
+  <data name="plNotify.Help">
+    <value xml:space="preserve">Bepaal of de auteur en de recensenten een e-mail moeten ontvangen afhankelijk van de status</value>
+  </data>
+  <data name="plNotify.Text">
+    <value xml:space="preserve">Berichtgeving</value>
+  </data>
+  <data name="plPermissions.Help" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Bepaal wie de content mag recenseren voor deze status</value>
+  </data>
+  <data name="plPermissions.Text">
+    <value xml:space="preserve">Recensenten</value>
+  </data>
+  <data name="plState.Help">
+    <value xml:space="preserve">Voer een naam in voor de status</value>
+  </data>
+  <data name="plState.Text">
+    <value xml:space="preserve">Status</value>
+  </data>
+  <data name="plWorkflow1.Help" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">Selecteer een workflow om te beheren</value>
+  </data>
+  <data name="plWorkflow1.Text">
+    <value xml:space="preserve">Workflow</value>
+  </data>
+  <data name="plWorkflow2.Help">
+    <value xml:space="preserve">Geef een naam op voor de Workflow</value>
+  </data>
+  <data name="plWorkflow2.Text">
+    <value xml:space="preserve">Workflow</value>
+  </data>
+  <data name="State.Header">
+    <value xml:space="preserve">Status</value>
+  </data>
+  <data name="WorkflowExists.Text">
+    <value xml:space="preserve">Er bestaat al een Workflow met de opgegeven naam voor deze site.</value>
+  </data>
+  <data name="WorkFlowStateHelp.Text" lastModified="2020-05-16 16:26:42">
+    <value xml:space="preserve">In deze sectie kunt je de workflow statussen beheren. Let op: wanneer een workflow in gebruik is kun je de statussen van deze workflow verwijderen. Tevens kunnen de eerste en laatste workflow statussen niet worden verwijderd.</value>
   </data>
 </root>
