--- a/Resources/DesktopModules/RazorModules/RazorHost/App_LocalResources/EditScript.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/RazorModules/RazorHost/App_LocalResources/EditScript.ascx.nl-NL.resx
@@ -12,29 +12,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ControlTitle_edit.Text">
-    <value xml:space="preserve">Script bewerken</value>
-  </data>
-  <data name="scriptListLabel.Help">
-    <value xml:space="preserve">Selecteer het Script dat u wilt gebruiken voor deze instantie van de Razor Host Module</value>
-  </data>
-  <data name="scriptListLabel.Text">
-    <value xml:space="preserve">Script:</value>
-  </data>
-  <data name="SourceFile.Text">
-    <value xml:space="preserve">Bronbestand - {0}</value>
-  </data>
-  <data name="plSource.Text">
-    <value xml:space="preserve">Script Bron:</value>
-  </data>
-  <data name="scriptsLabel.Help">
-    <value xml:space="preserve">Selecteer het Script dat u wilt aanpassen uit de lijst.</value>
-  </data>
-  <data name="scriptsLabel.Text">
-    <value xml:space="preserve">Selecteer Script:</value>
-  </data>
   <data name="AddNew.Text">
     <value xml:space="preserve">Nieuw Script bestand toevoegen</value>
+  </data>
+  <data name="cmdSave.Text">
+    <value xml:space="preserve">Script opslaan</value>
+  </data>
+  <data name="cmdSaveClose.Text">
+    <value xml:space="preserve">Script opslaan en terugkeren</value>
+  </data>
+  <data name="ControlTitle_edit.Text">
+    <value xml:space="preserve">Script bewerken</value>
   </data>
   <data name="currentScriptLabel.Help">
     <value xml:space="preserve">Vink deze optie aan om het huidige Script als actief Script te gebruiken binnen de gegenereerde weergave mode.</value>
@@ -42,10 +30,22 @@
   <data name="currentScriptLabel.Text">
     <value xml:space="preserve">Is Actief:</value>
   </data>
-  <data name="cmdSave.Text">
-    <value xml:space="preserve">Script opslaan</value>
+  <data name="plSource.Text" lastModified="2020-05-16 16:36:39">
+    <value xml:space="preserve">Scriptbron:</value>
   </data>
-  <data name="cmdSaveClose.Text">
-    <value xml:space="preserve">Script opslaan en terugkeren</value>
+  <data name="scriptListLabel.Help" lastModified="2020-05-16 16:36:39">
+    <value xml:space="preserve">Selecteer het script dat je wilt gebruiken voor deze instantie van de Razor Host Module</value>
+  </data>
+  <data name="scriptListLabel.Text">
+    <value xml:space="preserve">Script:</value>
+  </data>
+  <data name="scriptsLabel.Help" lastModified="2020-05-16 16:36:39">
+    <value xml:space="preserve">Selecteer het script dat je wilt aanpassen uit de lijst.</value>
+  </data>
+  <data name="scriptsLabel.Text">
+    <value xml:space="preserve">Selecteer Script:</value>
+  </data>
+  <data name="SourceFile.Text">
+    <value xml:space="preserve">Bronbestand - {0}</value>
   </data>
 </root>
