--- a/Resources/DesktopModules/RazorModules/RazorHost/App_LocalResources/RazorHost.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/RazorModules/RazorHost/App_LocalResources/RazorHost.ascx.nl-NL.resx
@@ -18,9 +18,8 @@
   <data name="EditContent.Action">
     <value xml:space="preserve">Bewerk Script</value>
   </data>
-  <data name="scriptListLabel.Help">
-    <value xml:space="preserve">
-	Selecteer het Script dat moet worden gebruikt voor deze instantie van de Razor Host Module</value>
+  <data name="scriptListLabel.Help" lastModified="2020-05-16 16:36:53">
+    <value xml:space="preserve">Selecteer het script dat moet worden gebruikt voor deze instantie van de Razor Host Module</value>
   </data>
   <data name="scriptListLabel.Text">
     <value xml:space="preserve">Script:</value>
